--- a/lecture1/index.html
+++ b/lecture1/index.html
@@ -5,6 +5,29 @@
 	</head>
 	
 	<style type="text/css">
+		body {
+			background:#aed;
+			font-family: Helvetica, Arial, sans-serif;
+		}
+		h2 {
+			font-size:26px;
+			font-weight:300;
+			color:#aaa;
+		}
+		.opacity {
+			opacity:0.2;
+		}
+		.button {
+            background:#333;
+			width:100px;
+			color:#fff;
+			height:20px;
+		     -moz-border-radius: 20px;
+		    -webkit-border-radius: 20px;
+		    -khtml-border-radius: 20px;
+		    border-radius: 20px;
+		    text-align:center;
+			}
 	</style>
 	
 	<body>
@@ -18,12 +41,20 @@
 		</ul>
 	
 		<h3>A nice button</h3>
+     
+        <div class="button">click me</div>
 
 		<h3>An invisible seal</h3>
 
 		<h3>A video</h3>
+		
+		<video width="300" height="240" controls="controls">
+		  <source src="gizmo.mp4" type="video/mp4" />
+		</video>
 
 		<h3>Two boxes side by side</h3>
 
+		
+		<p><img width="50" class="opacity" src="seal.png" /></p>
 	</body>
 </html>
